# quanta

./: .gitignore  .gitmodules  AGENTS.md  CHECKLIST_7_DAYS.md  CONTRIBUTING.md  DAY_1_DETAILED_GUIDE.md  DAY_7_LAUNCH_CHECKLIST.md  DEPLOYMENTS.md  DONATIONS.md  FUNDING_CONTACTS.md  HANDOFF-FOR-ARENA.md  INDEX.md  LAUNCH_GUIDE_7_DAYS.md  LICENSE  MEMORY.md  Makefile  PROJECT_CONTEXT.md  README.md  SECURITY.md  SECURITY_AUDIT.md  SESSION_CONTEXT.md  SKILLS.md  TRANSLATION_REPORT.md  index.html  push-to-github.sh  setup.sh
.github/: FUNDING.yml
.github/workflows/: forge-test.yml  security.yml
agents/openhuman/: PROJECT_SUMMARY.md
audit-applications/: BASE_BUILDER_GRANT_READY.md  CODE4RENA_SUBMISSION.md  GRANTS_APPLICATIONS.md  IMMUNEFI_BOUNTY.md  SHERLOCK_APPLICATION.md
bridge/: QuantaBridgeHyperlane.sol  README.md
content/crosspost/: linkedin-launch-post.md  reddit-post.md  twitter-thread.md
content/memes/: meme-prompts.md
content/twitter/: 30-day-content-calendar.md  launch-thread.md
contracts/: .env.example  README.md  deploy-multisig.sh  foundry.toml  run-all-security.sh  run-security-tools.sh  slither.config.json  standard_input_QuantaToken.json
contracts/flattened/: AIAgentRegistry_flat.sol  AIModelMarketplace_flat.sol  AIPaymentChannel_flat.sol  QuantaToken_flat.sol
contracts/script/: AcceptOwnership.s.sol  AcceptOwnershipNew.s.sol  Deploy.s.sol  DeployMultisig.s.sol  DeployQTAV2.s.sol  DeployV11.s.sol  RotateMultisig.s.sol  SetupMultisigOwnership.s.sol
contracts/src/: AIAgentRegistry.sol  AIModelMarketplace.sol  AIPaymentChannel.sol  QuantaToken.sol  SimpleMultisig.sol
contracts/src-v1.1/: AIAgentRegistry.sol  AIModelMarketplace.sol  AIPaymentChannel.sol  QuantaToken.sol
contracts/src-v1.1/interfaces/: IQuantaToken.sol
contracts/src-v1.2/: AIAgentRegistry.sol  AIModelMarketplace.sol  AIPaymentChannel.sol  QuantaToken.sol
contracts/src-v1.2/interfaces/: IQuantaToken.sol
contracts/src-v2/: QuantaRewardsDistributor.sol  QuantaTokenV2.sol  QuantaTreasuryController.sol  QuantaVestingWallet.sol
contracts/src/interfaces/: IQuantaToken.sol
contracts/test/: QuantaToken.t.sol
contracts/test-formal/: HalmosSpecs.t.sol  halmos.toml
contracts/test-invariant/: AIAgentRegistryInvariants.sol  AIPaymentChannelInvariants.sol  DeepFuzz.t.sol  FoundryInvariants.t.sol  QuantaTokenInvariants.sol  echidna.yaml
contracts/test-v1.1/: SecurityFixes.t.sol
contracts/test-v1.2/: QtaV2Tests.t.sol  QuantaSecurityTests.t.sol
contracts/test-v2/: QtaV2Tests.t.sol
docs/: KEY_CEREMONY_GUIDE.md  MARKETING.md  ROADMAP.md  TOKENOMICS.md  WHITEPAPER.md
docs-security/: AUDIT_APPLICATION_CODE4RENA.md  AUDIT_OPTIONS_COMPARISON.md  BRIDGE_SECURITY_REVIEW.md  INCIDENT_RESPONSE.md  README.md  forta-detection-bot.js
explorer/: index.html
forta-bot/: README.md  package.json
forta-bot/src/: agent.js  config.js  detectors.js  state.js
grant-proposals/: arbitrum-grant.md  base-builder-grant.md  ethglobal-hackathon.md  gitcoin-grant.md  optimism-retropgf.md
l1/: CHAIN_SPEC.md  CRYPTO.md  Cargo.toml  HANDOFF-FOR-ARENA.md  LINKEDIN_POST.md  MERGE-ANALYSIS.md  PALLET_SCAFFOLD.md  SESSION_CONTEXT.md
l1/crypto/: Cargo.toml  dilithium.rs
l1/crypto/src/: dilithium.rs  lib.rs
l1/node/: Cargo.toml
l1/node/src/: main.rs  rpc.rs  storage.rs
l1/pallets/pallet-pq-balances/: Cargo.toml
l1/pallets/pallet-pq-balances/src/: lib.rs  mock.rs  tests.rs
l1/pallets/pallet-pq-dilithium/: Cargo.toml
l1/pallets/pallet-pq-dilithium/src/: lib.rs  mock.rs  tests.rs
l1/pallets/pallet-pq-staking/: Cargo.toml
l1/pallets/pallet-pq-staking/src/: lib.rs  mock.rs  tests.rs
l1/runtime/: Cargo.toml  Cargo.toml.bak
l1/runtime/src/: lib.rs  lib.rs.bak.aura
l1/stubs/getrandom-03/: Cargo.toml
l1/stubs/getrandom-03/src/: lib.rs
l1/stubs/sc-network/: Cargo.toml
l1/stubs/sc-network/src/: lib.rs
l1/stubs/substrate-prometheus-endpoint/: Cargo.toml
l1/stubs/substrate-prometheus-endpoint/src/: lib.rs  sourced.rs
l1/tasks/: TASKS.md
multisig-setup/: HARDWARE_WALLET_CEREMONY.md  MULTISIG_SETUP_GUIDE.md  transfer-ownership-script.s.sol  verify-multisig.sh
nft-airdrop-platform/: README.md
nft-airdrop-platform/contracts/: foundry.toml
nft-airdrop-platform/contracts/src/: ERC1155MerkleAirdrop.sol  NFTMerkleAirdrop.sol
nft-airdrop-platform/contracts/test/: NFTMerkleAirdrop.t.sol
prototype/: ai_agent.py  blockchain.py  demo.py  pouw_consensus.py  quantum_wallet.py
sdk/: README.md  package-lock.json  package.json  tsconfig.json
sdk/examples/: autonomous-agent.ts  langchain-integration.ts
sdk/src/: agent.ts  channel.ts  client.ts  index.ts  marketplace.ts  types.ts
security-training/: 01-basics.md  02-scams.md  03-hardware-wallets.md  04-contract-reading.md  05-multisig.md  07-ai-agents.md  README.md
simulator/: tokenomics_sim.py
wallet-ui/: README.md  index.html
wargames/: README.md  WG-01-active-exploit.md  WG-02-signer-compromise.md  WG-03-frontend-hack.md  WG-04-zero-day-disclosure.md  WG-05-oracle-failure.md  WG-06-bridge-anomaly.md
