[package]
name = "quanta-l1-crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", default-features = false }
serde = { version = "1", default-features = false, features = ["derive"] }
pqcrypto-dilithium = "0.5"
pqcrypto-traits = "0.3"

[features]
default = ["std"]
std = ["codec/std", "scale-info/std", "sp-runtime/std", "serde/std"]
