[package]
name = "quanta-l1-node"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "quanta-node"
path = "src/main.rs"

[dependencies]
polkadot-sdk = { workspace = true, features = ["experimental", "runtime", "sc-service", "sc-cli", "sc-client-db", "sc-executor", "sp-core", "sp-runtime", "sp-io", "sc-consensus", "sc-consensus-manual-seal", "sc-transaction-pool", "sc-basic-authorship", "sc-network", "sp-blockchain", "sp-consensus", "sp-timestamp", "sp-inherents", "frame-system", "pallet-transaction-payment", "pallet-transaction-payment-rpc-runtime-api", "substrate-frame-rpc-system"], default-features = false }
quanta-l1-runtime = { path = "../runtime", default-features = false }
quanta-l1-crypto = { path = "../crypto", default-features = false }

[features]
default = ["std"]
std = ["polkadot-sdk/std", "quanta-l1-runtime/std", "quanta-l1-crypto/std"]
