[package]
name = "quanta-l1-node"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "quanta-node"
path = "src/main.rs"

[dependencies]
quanta-l1-runtime = { path = "../runtime", default-features = false }
tokio = { version = "1", features = ["full"] }
jsonrpsee = { version = "0.24", features = ["server", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"

[features]
default = ["std"]
std = ["quanta-l1-runtime/std"]
