[package]
name = "pallet-pq-dilithium"
version = "0.1.0"
edition = "2021"
[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }
polkadot-sdk = { workspace = true, features = ["frame-support", "frame-system"] }
quanta-l1-crypto = { path = "../../crypto", default-features = false }
[features]
default = ["std"]
std = ["codec/std", "scale-info/std", "polkadot-sdk/std", "quanta-l1-crypto/std"]
